bin/kube/tmpl/local/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: $APP_NAME
  name: $APP_NAME
spec:
  replicas: 1
  selector:
    matchLabels:
      run: $APP_NAME
  template:
    metadata:
      labels:
        run: $APP_NAME
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: local
        - name: NODE_PORT
          value: "3000"
        image: $APP_NAME:local
        name: $APP_NAME
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /app
          name: $APP_NAME-volume
      volumes:
      - name: $APP_NAME-volume
        hostPath:
          path: $APP_PATH
      imagePullSecrets:
          - name: hycsecret
