bin/kube/tmpl/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: $APP_NAME
  name: $APP_NAME
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: $APP_NAME
  type: NodePort
status:
  loadBalancer: {}
